welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:73: error: not found: value doite
    doite()
    ^